# Substrate

./: .gitignore  README.md  pyproject.toml
docs/benchmarks/: 2026-04-30-falsifying-result.md
scripts/: benchmark_adaptive.py  calibrate.py  prompts.txt  test_autoregressive_verifier.py  test_controller_loop.py  test_kernel_bank_loop.py  test_mlx_kernel.py  test_real_verifier_loop.py  test_weight_bank.py  train_probe.py
substrate/: __init__.py  cli.py
substrate/backend/: __init__.py  mlx_kernel.py  mlx_session.py  quantize.py  ram_weight_store.py  weight_bank.py  weight_store.py
substrate/bench/: __init__.py  plan_builders.py
substrate/calibration/: __init__.py  activation_dump.py  adapter.py  backend.py  metrics.py  mlxlm_backend.py  quantize.py  runner.py  schema.py  synthetic_backend.py
substrate/compiler/: feasibility.py  ir.py  planner.py  quality.py
substrate/models/: loaders.py  moe.py  quantized_store.py
substrate/runtime/: executor.py  fallback.py  monitor.py  prefetch.py  residency.py  tier_controller.py  verifier.py
